[package]
name = "fourth-shot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart", "tracing"] }
chrono = "0.4.41"
directories = "6.0.0"
displaydoc = "0.2.5"
reqwest = "0.12.20"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
